Fix search results name truncation

--- a/src/components/Search/SearchOption.module.scss
+++ b/src/components/Search/SearchOption.module.scss
@@ -33,6 +33,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 172px;
   }
 
   .userName {
